--- a/packet_sink/Makefile
+++ b/packet_sink/Makefile
@@ -1,12 +1,12 @@
 LINK=gcc
 CC=gcc
 CFLAGS=-c -fPIC -ggdb -Wall -I. -I/opt/local/include -I../lib -I../common -I../proto
-LINKFLAGS=-L. -g -ggdb -pthread -L/opt/local/lib -L../lib -fPIC
+LINKFLAGS=-L. -g -ggdb -pthread -L/opt/local/lib -L../lib
 LIBFLAGS=-shared -Wall -pthread
 LINKLIBS=-lcmpsc311 -lgcrypt -lm
-TARGETS=flooder
+TARGETS=sink
 
-FLOODER_OBJS= flooder.o \
+FLOODER_OBJS= sink.o \
 				main.o \
 				../common/ccommon.o \
 				../proto/proto.o
@@ -18,8 +18,8 @@ FLOODER_OBJS= flooder.o \
 	$(CC) $(CFLAGS) -o $@ $<
 all: $(TARGETS)
 
-flooder: main.o flooder.o ../proto/proto.o ../common/ccommon.o $(LIBS)
-	$(LINK) $(LINKFLAGS) flooder.o main.o ../proto/proto.o ../common/ccommon.o $(LINKLIBS) -o $@
+sink: main.o sink.o ../proto/proto.o ../common/ccommon.o $(LIBS)
+	$(LINK) $(LINKFLAGS) sink.o main.o ../proto/proto.o ../common/ccommon.o $(LINKLIBS) -o $@
 
 clean:
 	rm -f $(TARGETS) $(FLOODER_OBJS)
