--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,6 @@
 LINK=gcc
 CC=gcc
-CFLAGS=-c -ggdb -Wall -I. -I/opt/local/include -I../lib -I../common -I../proto
+CFLAGS=-c -fPIC -ggdb -Wall -I. -I/opt/local/include -I../lib -I../common -I../proto
 LINKFLAGS=-L. -g -ggdb -pthread -L/opt/local/lib -L../lib
 LIBFLAGS=-shared -Wall -pthread
 LINKLIBS=-lcmpsc311 -lgcrypt -lm
