--- a/server/server.yaml
+++ b/server/server.yaml
@@ -22,32 +22,33 @@ spec:
         ports:
           - containerPort: 6000
 ---
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: network-exp-server
-#spec:
-#  ports:
-#  - port: 6000
-#    targetPort: 6000
-#  selector:
-#    app: network-exp-server
-#  type: LoadBalancer
-#---
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
-  name: ingress-nginx
-  labels:
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+  name: network-exp-server
 spec:
-  type: LoadBalancer
-  selector:
-    app: 'network-exp-server'
   ports:
-  - protocol: TCP
-    port: 6000
+  - port: 6000
     targetPort: 6000
+    nodePort: 31259
+  selector:
+    app: network-exp-server
+  type: LoadBalancer
 ---
+#kind: Service
+#apiVersion: v1
+#metadata:
+#  name: ingress-nginx
+#  labels:
+#3    app.kubernetes.io/name: ingress-nginx
+#    app.kubernetes.io/part-of: ingress-nginx
+#spec:
+#  type: LoadBalancer
+#  selector:
+#    app: 'network-exp-server'
+#  ports:
+#  - protocol: TCP
+#    port: 6000
+#    targetPort: 6000
+#---
 
