--- a/Dockerfile.flooder
+++ b/Dockerfile.flooder
@@ -1,6 +1,8 @@
 FROM ubuntu:latest
-RUN apt-get update && apt-get install -y libgcrypt-dev make gcc iputils-ping
+RUN apt-get update && apt-get install -y libgcrypt-dev make gcc iputils-ping libcurl4-openssl-dev
 COPY . /network-exp/
 WORKDIR /network-exp/flooder
 RUN make
-ENTRYPOINT ["./flooder", "-v","-t", "2", "192.168.2.1", "6000", "192.168.2.1", "6001"]
+RUN chmod +x flooder-script.sh
+ENTRYPOINT [ "./flooder-script.sh" ]
+# ENTRYPOINT ["./flooder", "-v","-t", "2", "192.168.2.1", "6000", "192.168.2.1", "6001"]
