flooder scale now accepts double precision

--- a/analysis/Pipfile
+++ b/analysis/Pipfile
@@ -5,13 +5,12 @@ verify_ssl = true
 
 [dev-packages]
 pep8 = "*"
+autopep8 = "*"
 
 [packages]
 numpy = "*"
 scipy = "*"
 matplotlib = "*"
-pylint = "*"
-yapf = "*"
 pyqt5 = "*"
 sklearn = "*"
 
